Added keyboard-listener directive which is sending keyboard events Added Google font simillar to the original one Added start-page component Added sprite and menu selecting sound effect Modified gulpfile in order to include translations, images and sounds

--- a/client/app/translations/en.json
+++ b/client/app/translations/en.json
@@ -1,3 +1,7 @@
 {
-	"WELCOME": "Welcome to the Tanks game!"
+	"WELCOME": "Welcome to the Tanks game!",
+	"SETTINGS": "Settings",
+	"1_PLAYER": "1 player",
+	"2_PLAYERS": "2 players",
+	"HIGH_SCORES": "High-Scores"
 }
